--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <head>
-  
+  #top{
+      position:fixed;
+      background: #FFFFFF;
+      top:0px;
+      width:100%;
+      height=240px;
+  }
 </head>
 <body>
-<div 
+  <div id="top>
+           <img src="SUN7.png" width=200px height=200px></img><h1>Sun7 UP主互助团队</h1>
+  </div>
