--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <head>
+  <title>sun7 up</title>
+  <style type="text/css">
   #top{
       position:fixed;
       background: #FFFFFF;
@@ -6,6 +8,7 @@
       width:100%;
       height=240px;
   }
+  </style>
 </head>
 <body>
   <div id="top>
