--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
       width:100%;
       height=240px;
   }
+  a{
+      text-decoration:none;
+  }
   </style>
 </head>
 <body>
   <div id="top>
-           <img src="SUN7.png" width=200px height=200px></img><h1>Sun7 UP主互助团队</h1>
+           <img src="SUN7.png" width=200px height=200px></img><h1>Sun7 UP主互助团队</h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="search.html"><font size=10px color=Black face="宋体">快捷查询</font></a>
   </div>
