--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <style type="text/css">
   #top{
       position:fixed;
-      background: #FFFFFF;
+      background: #FFFFCC;
       top:0px;
       width:100%;
       height=240px;
@@ -15,5 +15,5 @@
 </head>
 <body>
   <div id="top>
-           <img src="SUN7.png" width=200px height=200px></img><h1>Sun7 UP主互助团队</h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="search.html"><font size=10px color=Black face="宋体">快捷查询</font></a>
+           <img src="SUN7.png" width=200px height=200px></img><h1>Sun7 UP主互助团队</h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="search.html"><font size=6px color=Red face="宋体">快捷查询</font></a>
   </div>
