--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <title>sun7 up</title>
+  <title>BilibiliUP SUN7讨论组</title>
   <style type="text/css">
   #top{
       position:fixed;
@@ -14,6 +14,8 @@
   </style>
 </head>
 <body>
-  <div id="top>
-           <img src="SUN7.png" width=200px height=200px></img><h1>Sun7 UP主互助团队</h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="search.html"><font size=6px color=Red face="宋体">快捷查询</font></a>
+  <div id="top">
+           <img src="SUN7.png" width=200px height=200px></img><h1>Sun7 UP主互助团队</h1>
   </div>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="search.html"><font size=6px color=Red face="宋体">快捷查询</font></a>
+</body>
