--- a/search.html
+++ b/search.html
@@ -1,4 +1,9 @@
 <head>
-
+  <script>
+   window.onload = ()=> {
+    let text = prompt("检索（平台(2字)@账号名）", "");
+    window.location.href = "http://minecreeper86.github.io/sun7up/docs/"+text+".html";
+   }
+  </script>
 </head>
 <body>检索中...</body>
