--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       background: #FFFFCC;
       top:0px;
       width:100%;
-      height=240px;
+      height:240px;
   }
   a{
       text-decoration:none;
@@ -17,6 +17,6 @@
   <div id="top">
            <img src="SUN7.png" width=200px height=200px></img><strong><font size=8px>Sun7 UP主互助团队</font></strong>
   </div>
-  <div style="height=240px"></div>
+  <div style="height:240px"></div>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="search.html"><font size=6px color=Red face="宋体">快捷查询</font></a>
 </body>
