--- a/search.html
+++ b/search.html
@@ -1,7 +1,8 @@
 <head>
   <script>
    window.onload = ()=> {
-    let text = prompt("检索（平台(2字)@账号名）", "");
+    let text = "unsearched";
+    text = prompt("检索（平台(2字)@账号名）", "");
     window.location.href = "http://minecreeper86.github.io/sun7up/docs/"+text+".html";
    }
   </script>
