--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
    window.onload = ()=> {
     let text = "unsearched";
     text = prompt("检索（平台(2字)@账号名）", "");
-    window.location.href = "http://minecreeper86.github.io/sun7up/docs/"+text+".html";
+    window.location.href = "http://minecreeper86.github.io/sun7up/docs/"+text+"p.html";
    }
   </script>
 </head>
