--- a/index.html
+++ b/index.html
@@ -18,5 +18,5 @@
            <img src="SUN7.png" width=100px height=100px></img><strong><font size=8px>Sun7 UP主互助团队</font></strong>
   </div>
   <div style="height:120px"></div>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="search.html"><font size=6px color=Red face="宋体">快捷查询</font></a>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="search.html"><font size=6px color=Red face="宋体">快捷查询</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="search.html"><font size=6px color=Red face="宋体">分数测试</font></a>
 </body>
