--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@ var coins = prompt("请输入你视频的硬币数量","");
 var stars = prompt("请输入你视频的收藏数量","");
 
 var 播放量得分 = Math.round(parseInt(watches)/10);
-var 平均播放分 = Math.round(watches/video*2);
+var 平均播放分 = Math.round(watches/videos*2);
 var 投币率得分 = Math.round(coins/watches*100000);
 
 document.getElementById("播放量得分").innerHTML=播放量得分;
