--- a/test.html
+++ b/test.html
@@ -10,13 +10,13 @@ var shares = prompt("请输入你视频的分享数量","");
 var coins = prompt("请输入你视频的硬币数量","");
 var stars = prompt("请输入你视频的收藏数量","");
 
-var 播放量得分 = Math.round(parseInt(watches)/10);
-var 平均播放分 = Math.round(watches/videos*2);
-var 投币率得分 = Math.round(coins/watches*100000);
+var s1 = Math.round(parseInt(watches)/10);
+var s2 = Math.round(watches/videos*2);
+var s3 = Math.round(coins/watches*100000);
 
-document.getElementById("播放量得分").innerHTML=播放量得分;
+document.getElementById("s1").innerHTML=s1;
 </script>
 </head>
 <body>
-  <font size="10">播放量得分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="7" color=Red><p id="播放量得分">0</p></font>
+  <font size="10">播放量得分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="7" color=Red><p id="s1">0</p></font>
 </body>
