--- a/test.html
+++ b/test.html
@@ -1,9 +1,9 @@
 <head>
 </head>
 <body>
-  <font size="8">播放量得分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s1p">0</p></font>
-  <font size="8">平均播放分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s2p">0</p></font>
-  <font size="8">观看币率分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s3p">0</p></font>
+  <font size="8">播放量得分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s1p">填写有误无法计算</p></font>
+  <font size="8">平均播放分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s2p">填写有误无法计算</p></font>
+  <font size="8">观看币率分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s3p">填写有误无法计算</p></font>
 <script>
   var fans = prompt("请输入你的粉丝数量","");
   var videos = prompt("请输入你的稿件数量","");
