--- a/test.html
+++ b/test.html
@@ -1,10 +1,13 @@
 <head>
 </head>
 <body>
+  粉丝数量：<input type="text" id="fansp"></input><br>
+  <input type="button" onclick="test()" value="提交">
   <font size="8">播放量得分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s1p">填写有误无法计算</p></font>
   <font size="8">平均播放分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s2p">填写有误无法计算</p></font>
   <font size="8">观看币率分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s3p">填写有误无法计算</p></font>
 <script>
+  function test(){
   var fans = prompt("请输入你的粉丝数量","");
   var videos = prompt("请输入你的稿件数量","");
   var watches = prompt("请输入你视频的观看数量","");
@@ -22,5 +25,6 @@
   document.getElementById("s1p").innerHTML=(""+s1);
   document.getElementById("s2p").innerHTML=(""+s2);
   document.getElementById("s3p").innerHTML=(""+s3);
+  }
 </script>
 </body>
