--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
   var coins = prompt("请输入你视频的硬币数量","");
   var stars = prompt("请输入你视频的收藏数量","");
 
-  var s1 = Math.round(watches/10);
+  var s1 = Math.round(parseInt(watches)/10);
   var s2 = Math.round(watches/videos*2);
   var s3 = Math.round(coins/watches*100000);
 
