--- a/test.html
+++ b/test.html
@@ -10,9 +10,9 @@
   <font size="8">观看币率分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s3p">-</p></font>
 <script>
   function test(){
-  var fans = document.getElementById("fansp");
-  var videos = document.getElementById("videosp");
-  var watches = document.getElementById("watchesp");
+  var fans = document.getElementById("fansp").value;
+  var videos = document.getElementById("videosp").value;
+  var watches = document.getElementById("watchesp").value;
   var discusses = prompt("请输入你视频的评论数量","");
   var danmu = prompt("请输入你视频的弹幕数量","");
   var likes = prompt("请输入你视频的点赞数量","");
