--- a/test.html
+++ b/test.html
@@ -20,7 +20,11 @@ UP天数：<input type="text" id="updays"></input><br>
   <font size="8">路转粉率分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s6p">-</p></font>
   <font size="8">观看分享分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s7p">-</p></font>
   <font size="8">互动活跃分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s8p">-</p></font>
-  <font size="20"><p id="scores">-</p></font>
+  <font size="8">日均播放分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s9p">-</p></font>
+  <font size="20"><p id="scores1">-</p></font>
+  <font size="8">日均播放分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s9p">-</p></font>
+  <font size="8">视频产量分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s10p">-</p></font>
+  <font size="20"><p id="scores2">-</p></font>
 <script>
   function test(){
   var fans = document.getElementById("fansp").value;
@@ -34,7 +38,7 @@ UP天数：<input type="text" id="updays"></input><br>
   var stars = document.getElementById("starsp").value;
   var upday = document.getElementById("updays").value;
 
-  var s1 = Math.round(parseInt(watches)/10);
+  var s1 = Math.round(watches/10);
   var s2 = Math.round(watches/videos*2);
   var s3 = Math.round(coins/watches*100000);
   var s4 = Math.round(likes/watches*10000);
@@ -42,7 +46,6 @@ UP天数：<input type="text" id="updays"></input><br>
   var s6 = Math.round(fans/watches*500000);
   var s7 = Math.round(shares/watches*1000000);
   var s8 = Math.round(((parseInt(danmu)+parseInt(discusses))/watches)*10000);
-
   document.getElementById("s1p").innerHTML=(""+s1);
   document.getElementById("s2p").innerHTML=(""+s2);
   document.getElementById("s3p").innerHTML=(""+s3);
@@ -51,8 +54,15 @@ UP天数：<input type="text" id="updays"></input><br>
   document.getElementById("s6p").innerHTML=(""+s6);
   document.getElementById("s7p").innerHTML=(""+s7);
   document.getElementById("s8p").innerHTML=(""+s8);
-  var score = s1+s2+s3+s4+s5+s6+s7+s8;
-  document.getElementById("scores").innerHTML=("总分："+score);
+  var s1s8 = s1+s2+s3+s4+s5+s6+s7+s8;
+  document.getElementById("scores1").innerHTML=("视频质量篇-总分："+s1s8);
+    
+  var s9 = Math.round(watches/upday*10);
+  var s10 = Math.round(videos/upday*1000);
+  document.getElementById("s9p").innerHTML=(""+s9);
+  document.getElementById("s10p").innerHTML=(""+s10);
+  var s9s = s9+s10;
+  document.getElementById("scores2").innerHTML=("日均活跃篇-总分："+s9s);
   }
 </script>
 </body>
