--- a/test.html
+++ b/test.html
@@ -21,10 +21,10 @@ UP天数：<input type="text" id="updays"></input><br>
   <font size="8">观看分享分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s7p">-</p></font>
   <font size="8">互动活跃分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s8p">-</p></font>
   <font size="8">日均播放分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s9p">-</p></font>
-  <font size="20"><p id="scores1">-</p></font>
+  <font size="20"><p id="scores1">视频质量篇-总分：-</p></font>
   <font size="8">日均播放分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s9p">-</p></font>
   <font size="8">视频产量分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s10p">-</p></font>
-  <font size="20"><p id="scores2">-</p></font>
+  <font size="20"><p id="scores2">日均活跃篇-总分：-</p></font>
 <script>
   function test(){
   var fans = document.getElementById("fansp").value;
