--- a/test.html
+++ b/test.html
@@ -68,6 +68,9 @@ UP天数：<input type="text" id="updays"></input><br>
   document.getElementById("s12p").innerHTML=(""+s12);
   var s9s = s9+s10+s11+s12;
   document.getElementById("scores2").innerHTML=("日均活跃篇-总分："+s9s);
+    
+  var month=obj.getMonth()+1;
+  <div style="background:url(荣誉证书.png) no-repeat center center"></div>
   }
 </script>
 </body>
