--- a/test.html
+++ b/test.html
@@ -1,3 +1,5 @@
+<!--sun7up - commit ID v62.0 final patch-->
+<!--功能更新完毕-->
 <head>
 <title id="title">UP主测评</title>
 </head>
@@ -27,7 +29,15 @@ UP天数：<input type="text" id="updays"></input><br>
   <font size="5">视频产量分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s10p">-</p></font>
   <font size="5">日均点赞分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s11p">-</p></font>
   <font size="5">日均硬币分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s12p">-</p></font>
+  <font size="5">日均弹幕分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s13p">-</p></font>
+  <font size="5">日均评论分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s14p">-</p></font>
   <font size="20"><p id="scores2">日均活跃篇-总分：-</p></font>
+  <font size="5">累计点赞分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s15p">-</p></font>
+  <font size="5">累计硬币分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s16p">-</p></font>
+  <font size="5">累计分享分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s17p">-</p></font>
+  <font size="5">累计粉丝分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s18p">-</p></font>
+  <font size="5">累计稿件分</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4" color=Red><p id="s19p">-</p></font>
+  <font size="20"><p id="scores3">累计成就篇-总分：-</p></font>
   <font size="6"><div style="background:url(荣誉证书.png) no-repeat center center;width:1197px;height:612px">
     <br><br><br><span id="upname2"><font size="7"></font></span><font size="8"><div id="mont"></div></font>
     <div style="height:45px" id="ryzs1"></div><div style="height:45px" id="ryzs2"></div><div style="height:45px" id="ryzs3"></div><div style="height:45px" id="ryzs4"></div>
@@ -68,24 +78,40 @@ UP天数：<input type="text" id="updays"></input><br>
   var s10 = Math.round(videos/upday*5000);
   var s11 = Math.round(likes/upday*100);
   var s12 = Math.round(coins/upday*1000);
-  var s13 = Math.round(coins/upday*1000);
-  var s14 = Math.round(coins/upday*1000);
+  var s13 = Math.round(danmu/upday*100);
+  var s14 = Math.round(discusses/upday*500);
   document.getElementById("s9p").innerHTML=(""+s9);
   document.getElementById("s10p").innerHTML=(""+s10);
   document.getElementById("s11p").innerHTML=(""+s11);
   document.getElementById("s12p").innerHTML=(""+s12);
-  var s9s = s9+s10+s11+s12;
-  document.getElementById("scores2").innerHTML=("日均活跃篇-总分："+s9s);
-    
+  document.getElementById("s13p").innerHTML=(""+s13);
+  document.getElementById("s14p").innerHTML=(""+s14);
+  var s9s14 = s9+s10+s11+s12+s13+s14;
+  document.getElementById("scores2").innerHTML=("日均活跃篇-总分："+s9s14);
+  
+  var s15 = Math.round(likes*2-coins+1000);
+  var s16 = Math.round(coins*20-videos*20+1000);
+  var s17 = Math.round(shares*200-videos*30+1000);
+  var s18 = Math.round(fans*100-videos*20+1000);
+  var s19 = Math.round(videos*100-upday);
+  document.getElementById("s15p").innerHTML=(""+s15);
+  document.getElementById("s16p").innerHTML=(""+s16);
+  document.getElementById("s17p").innerHTML=(""+s17);
+  document.getElementById("s18p").innerHTML=(""+s18);
+  document.getElementById("s19p").innerHTML=(""+s19);
+  var s15s19 = s15+s16+s17+s18+s19;
+  document.getElementById("scores3").innerHTML=("累计成就篇-总分："+s15s19);
+  
   var now = new Date();
   var month=now.getMonth()+1;
   document.getElementById("upname2").innerHTML=("<font size=7px>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"+document.getElementById("upname").value+"</font>");
   document.getElementById("mont").innerHTML=("<font size=6px>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"+month+"</font>");
   document.getElementById("ryzs1").innerHTML=("&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"+s1s8);
-  document.getElementById("ryzs2").innerHTML=("&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"+s9s);
-  document.getElementById("ryzs3").innerHTML=("&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"+0);
-  document.getElementById("ryzs4").innerHTML=("&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"+(parseInt(s1s8)+parseInt(s9s)));
-  document.getElementById("title").innerHTML=("UP主测评 - 得分"+(parseInt(s1s8)+parseInt(s9s)));
+  document.getElementById("ryzs2").innerHTML=("&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"+s9s14);
+  document.getElementById("ryzs3").innerHTML=("&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"+s15s19);
+  document.getElementById("ryzs4").innerHTML=("&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"+(parseInt(s1s8)+parseInt(s9s14)+parseInt(s15s19)));
+  document.getElementById("title").innerHTML=("UP主测评 - 得分"+(parseInt(s1s8)+parseInt(s9s14)+parseInt(s15s19)));
   }
 </script>
 </body>
+
