--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<!--sun7up - commit ID v64.0 fix patch 1-->
+<!--sun7up - commit ID v66.0 fix patch 1-->
 <!--功能更新完毕-->
 <head>
 <title id="title">UP主测评</title>
@@ -56,12 +56,12 @@ UP天数：<input type="text" id="updays"></input><br>
   var upday = document.getElementById("updays").value;
 
   var s1 = Math.round(watches/10);
-  var s2 = Math.round(watches/videos*2);
-  var s3 = Math.round(coins/watches*100000);
-  var s4 = Math.round(likes/watches*10000);
-  var s5 = Math.round(stars/watches*120000);
-  var s6 = Math.round(fans/watches*500000);
-  var s7 = Math.round(shares/watches*1000000);
+  var s2 = Math.round(watches/videos*5);
+  var s3 = Math.round(coins/watches*60000);
+  var s4 = Math.round(likes/watches*6000);
+  var s5 = Math.round(stars/watches*72000);
+  var s6 = Math.round(fans/watches*300000);
+  var s7 = Math.round(shares/watches*600000);
   var s8 = Math.round(((parseInt(danmu)+parseInt(discusses))/watches)*10000);
   document.getElementById("s1p").innerHTML=(""+s1);
   document.getElementById("s2p").innerHTML=(""+s2);
